Table categories {
    id uuid [pk]
    name varchar [not null]
    description text
}

Table products {
    id uuid [pk]
    name varchar [not null]
    price numeric(10,2) [not null]
    category_id uuid [ref: > categories.id]
    image_url varchar
}

Table tables {
    id uuid [pk]
    number int [not null]
    name varchar
    capacity int [not null, default: 4]
}

Table bills {
    id uuid [pk]
    table_id uuid [ref: > tables.id]
    amount numeric(10,2) [not null]
    date date [not null]
    status varchar [default: 'open']
    paid boolean [not null, default: false]
    guests int
    created_at timestamptz [default: `CURRENT_TIMESTAMP`]
    updated_at timestamptz [default: `CURRENT_TIMESTAMP`]
}

Table bill_items {
    bill_id uuid [ref: > bills.id]
    product_id uuid [ref: > products.id]
    quantity int [not null]
    unit_price numeric(10,2) [not null]
    created_at timestamptz [default: `CURRENT_TIMESTAMP`]
    updated_at timestamptz [default: `CURRENT_TIMESTAMP`]
    indexes {
        (bill_id, product_id) [pk]
    }
}
